# adaptivejs

./: .gitignore  LICENSE  MIGRATION.md  README.md  package.json  tsconfig.base.json
cli/: README.md  adaptive-cli.mjs  build-app.mjs  env-loader.mjs  package.json
common/: package.json
common/src/: adaptive-form-data.d.ts  adaptive-form-data.ts  index.d.ts  index.ts
core/: package.json
core/src/: index.ts  ir.d.ts  ir.ts  jsx-runtime.ts  types.ts
create-adaptive-app/: README.md  index.mjs  package.json
create-adaptive-app/template/: .env.example  _gitignore  index.html  package.json
desktop-rust/: Cargo.toml  README.md  build.rs  package.json
desktop-rust/adaptive/: app.ir.json  mod.rs
desktop-rust/adaptive/apis/: app.rs
desktop-rust/adaptive/components/: mod.rs
desktop-rust/adaptive/layout/: mod.rs
desktop-rust/adaptive/runtime/: mod.rs  page.rs  reactive.rs
desktop-rust/adaptive/style/: mod.rs
desktop-rust/src/: main.rs
example/: .env.example  index.html  package.json  tsconfig.json
example/.adaptive-nitro/: adaptive-handler.js
example/.output/: nitro.json
example/public/: hooks-demo.js  styles.css
example/src/: desktop.tsx
ft/: package.json
ft/src/: adaptive-form-data.ts  boundary-component.ts  (+22 more)
mobile-android/: README.md  package.json
plugins/: README.md
scripts/: adaptive-cli.mjs  build-app.mjs  build-example.mjs  build-package.mjs  env-loader.mjs  npm-release.mjs  sync-ft-to-example.mjs
ssr/: package.json
static/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
ui/: package.json
web/: package.json
(+133 files in other folders)
