[package]
name = "adaptive-desktop-rust"
version = "0.1.0"
edition = "2021"
description = "Adaptive native desktop target with iced"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde_json = "1"


[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
